--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   "author": "Stefan Németh <mail.snemeth@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "@babel/core": "^7.4.4",
+    "@babel/node": "^7.4.4",
+    "@babel/preset-env": "^7.4.5"
   },
   "babel": {
     "presets": [
-      "env"
+      "@babel/preset-env"
     ]
   },
   "dependencies": {
     "country-data": "0.0.31",
-    "geonames": "^0.2.1",
     "money": "^0.2.0",
     "pull-stream": "^3.6.9",
     "request": "^2.87.0",
